data/derived/sp14/progs/unify/prog1795.ml.out
Characters 127-139:
  -> Format.sprintf ("sin(pi*%s)" exprToString( e' ))
                     ^^^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
